--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 /frontend/npm-debug.log*
 
 # Python / Backend
-/backend/__pycache__/
+/backend/config/__pycache__/
 /backend/*.pyc
 /backend/db.sqlite3
 /backend/.env
