--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.1",
+    "axios": "^1.8.4",
     "lucide-react": "^0.488.0",
     "path": "^0.12.7",
     "react": "^19.0.0",
